Refactor typing